Finish authentication process
