# src/config/openapi.json
@@ -14,55 +14,19 @@
 		"/users": {
 			"post": {
 				"summary": "Creates a new user.",
-				"description": "Optional extended description in CommonMark or HTML.",
 				"requestBody": {
 					"required": true,
 					"content": {
 						"application/json": {
 							"schema": {
-								"type": "object",
-								"properties": {
-									"email": {
-										"type": "string"
+								"anyOf": [
+									{
+										"$ref": "#/components/schemas/Company"
 									},
-									"nickname": {
-										"type": "string"
-									},
-									"username": {
-										"type": "string"
-									},
-									"password": {
-										"type": "string"
-									},
-									"company": {
-										"type": "object",
-										"properties": {
-											"legalName": {
-												"type": "string"
-											},
-											"businessName": {
-												"type": "string"
-											},
-											"registration": {
-												"type": "string"
-											}
-										}
-									},
-									"employee": {
-										"type": "object",
-										"properties": {
-											"legalName": {
-												"type": "string"
-											},
-											"businessName": {
-												"type": "string"
-											},
-											"registration": {
-												"type": "string"
-											}
-										}
+									{
+										"$ref": "#/components/schemas/Employee"
 									}
-								}
+								]
 							}
 						}
 					}
@@ -74,35 +38,126 @@
 				}
 			}
 		},
+		"/users/me": {
+			"get": {
+				"summary": "Returns logged user info",
+				"security": [
+					{
+						"bearerAuth": []
+					}
+				],
+				"responses": {
+					"200": {
+						"description": "A JSON object representing logged user"
+					}
+				}
+			}
+		},
 		"/sessions": {
 			"post": {
-				"summary": "Authenticates and returns JWT token.",
+				"description": "Authenticate user",
 				"requestBody": {
 					"required": true,
 					"content": {
 						"application/json": {
 							"schema": {
-								"type": "object",
-								"properties": {
-									"email": {
-										"type": "string"
-									},
-									"username": {
-										"type": "string"
-									},
-									"password": {
-										"type": "string"
-									}
-								}
+								"$ref": "#/components/schemas/AuthObject"
 							}
 						}
 					}
 				},
 				"responses": {
 					"200": {
-						"description": "A JSON array of user names"
+						"description": "A JWT token"
 					}
 				}
+			}
+		}
+	},
+	"components": {
+		"schemas": {
+			"Company": {
+				"type": "object",
+				"properties": {
+					"email": {
+						"type": "string"
+					},
+					"nickname": {
+						"type": "string"
+					},
+					"username": {
+						"type": "string"
+					},
+					"password": {
+						"type": "string"
+					},
+					"company": {
+						"type": "object",
+						"properties": {
+							"legalName": {
+								"type": "string"
+							},
+							"businessName": {
+								"type": "string"
+							},
+							"registration": {
+								"type": "string"
+							}
+						}
+					}
+				}
+			},
+			"Employee": {
+				"type": "object",
+				"properties": {
+					"email": {
+						"type": "string"
+					},
+					"nickname": {
+						"type": "string"
+					},
+					"username": {
+						"type": "string"
+					},
+					"password": {
+						"type": "string"
+					},
+					"employee": {
+						"type": "object",
+						"properties": {
+							"fullName": {
+								"type": "string"
+							},
+							"phoneNumber": {
+								"type": "string"
+							},
+							"registration": {
+								"type": "string"
+							}
+						}
+					}
+				}
+			},
+			"AuthObject": {
+				"type": "object",
+				"properties": {
+					"email": {
+						"type": "string"
+					},
+					"username": {
+						"type": "string"
+					},
+					"password": {
+						"type": "string"
+					}
+				}
+			}
+		},
+		"securitySchemes": {
+			"bearerAuth": {
+				"type": "http",
+				"scheme": "bearer",
+				"bearerFormat": "JWT"
 			}
 		}
 	}
