# src/modules/users/infra/http/routers/users.routes.ts
@@ -1,27 +1,13 @@
-import ICreateCompanyDTO from '@modules/users/dtos/ICreateCompanyDTO';
-import { celebrate, Joi, Segments } from 'celebrate';
 import { Router } from 'express';
 import UsersController from '../controllers/UsersController';
+import ensureAuthentication from '../middlewares/ensureAuthentication';
 
 const router = Router();
 const usersController = new UsersController();
 
-router.post(
-	'/',
-	// celebrate({
-	// 	[Segments.BODY]: {
-	// 		email: Joi.string().email().required(),
-	// 		nickname: Joi.string().required(),
-	// 		username: Joi.string().required(),
-	// 		password: Joi.string().required(),
-	// 		company: Joi.object({
-	// 			legalName: Joi.string().required(),
-	// 			businessName: Joi.string().required(),
-	// 			registration: Joi.string().required(),
-	// 		}),
-	// 	},
-	// }),
-	usersController.create,
-);
+router.post('/', usersController.create);
+// Authenticated routes
+router.use(ensureAuthentication);
+router.get('/me', usersController.getLoggedUserInfo);
 
 export default router;
